--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
     "commonjs": "^0.0.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "nodemon": "^3.0.1",
     "vite": "^5.0.2",
     "vue": "^3.3.9",
     "vue-router": "^4.2.5"
@@ -13,12 +12,13 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "start": "ts-node-esm ./src/server/index.ts"
+    "start": "npx nodemon ./src/server/index.ts"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/node": "^20.10.0",
     "autoprefixer": "^10.4.16",
+    "nodemon": "^3.0.1",
     "postcss": "^8.4.31",
     "tailwindcss": "^3.3.5",
     "ts-node": "^10.9.1"
