--- a/.env.exemple
+++ b/.env.exemple
@@ -1,1 +1,3 @@
 GAME_DIR=D:\Games\Command and Conquer Red Alert II
+VITE_DATA_API_URL=http://localhost:8080
+VITE_WS_URL=ws://localhost:8080/websockets
