--- a/package.json
+++ b/package.json
@@ -2,11 +2,16 @@
   "dependencies": {
     "@vitejs/plugin-vue": "^4.5.0",
     "commonjs": "^0.0.1",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "pinia": "^2.1.7",
+    "pinia-plugin-persistedstate": "^3.2.0",
+    "qs": "^6.11.2",
     "vite": "^5.0.2",
     "vue": "^3.3.9",
-    "vue-router": "^4.2.5"
+    "vue-router": "^4.2.5",
+    "ws": "^8.14.2"
   },
   "scripts": {
     "dev": "vite",
@@ -15,8 +20,11 @@
     "start": "npx nodemon ./src/server/index.ts"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/node": "^20.10.0",
+    "@types/qs": "^6.9.10",
+    "@types/ws": "^8.5.10",
     "autoprefixer": "^10.4.16",
     "nodemon": "^3.0.1",
     "postcss": "^8.4.31",
