set up build process

--- a/.env.exemple
+++ b/.env.exemple
@@ -1,3 +1,7 @@
-GAME_DIR=D:\Games\Command and Conquer Red Alert II
-VITE_DATA_API_URL=http://localhost:8080
-VITE_WS_URL=ws://localhost:8080/websockets
+GAME_DIR=C:\Program Files (x86)\Origin Games\Command and Conquer Red Alert II
+PORT=8080
+CLIENT_BASE_PATH=/ra2
+
+VITE_PORT=8080
+VITE_HOSTNAME=localhost
+VITE_CLIENT_BASE_PATH=/ra2
