--- a/package.json
+++ b/package.json
@@ -24,16 +24,18 @@
     "prepare-client": "npx vite build",
     "prepare-server": "npx tsc --outDir ./dist/serverjs -p tsconfig.build.json",
     "build-pkg": "npx pkg .",
-    "build-all": "npm run prepare-client && npm run prepare-server && npm run build-pkg"
+    "build-all": "npm run prepare-client && npm run prepare-server && npm run build-pkg",
+    "start-electron": "electron ."
   },
   "devDependencies": {
-    "@types/ejs": "^3.1.5",
     "@types/cors": "^2.8.17",
+    "@types/ejs": "^3.1.5",
     "@types/express": "^4.17.21",
     "@types/node": "^20.10.0",
     "@types/qs": "^6.9.10",
     "@types/ws": "^8.5.10",
     "autoprefixer": "^10.4.16",
+    "electron": "^28.0.0",
     "nodemon": "^3.0.1",
     "pkg": "^5.8.1",
     "postcss": "^8.4.31",
@@ -49,5 +51,6 @@
     ],
     "outputPath": "./dist/server"
   },
-  "bin": "./dist/serverjs/index.js"
+  "bin": "./dist/serverjs/index.js",
+  "main": "./src/gui/index.js"
 }
