--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "vite": "^5.0.2",
     "vue": "^3.3.9",
     "vue-router": "^4.2.5",
+    "vuedraggable": "^4.1.0",
     "ws": "^8.14.2"
   },
   "scripts": {
