migrate to deno

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "ra2-ui",
+  "type": "module",
   "dependencies": {
     "@vitejs/plugin-vue": "^4.5.0",
     "commonjs": "^0.0.1",
@@ -20,7 +21,7 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "start": "npx nodemon ./src/server/index.ts",
+    "start": "deno run ./src/server/index.ts",
     "clean": "rm -rf ./dist",
     "prepare-client": "npx vite build",
     "prepare-server": "npx tsc --outDir ./dist/serverjs -p tsconfig.build.json",
@@ -37,21 +38,7 @@
     "@types/ws": "^8.5.10",
     "autoprefixer": "^10.4.16",
     "electron": "^28.0.0",
-    "nodemon": "^3.0.1",
-    "pkg": "^5.8.1",
     "postcss": "^8.4.31",
-    "tailwindcss": "^3.3.5",
-    "ts-node": "^10.9.1"
-  },
-  "pkg": {
-    "scripts": "./dist/serverjs/**/*.js",
-    "assets": "./dist/client/**/*",
-    "targets": [
-      "node18-win-x64",
-      "node18-linux-x64"
-    ],
-    "outputPath": "./dist/server"
-  },
-  "bin": "./dist/serverjs/index.js",
-  "main": "./src/gui/index.js"
+    "tailwindcss": "^3.3.5"
+  }
 }
